--- a/hotrodclient/pom.xml
+++ b/hotrodclient/pom.xml
@@ -23,9 +23,20 @@
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-bom</artifactId>
 <!--
+		6.4.0
+        <version>6.2.0.Final-redhat-4</version>
+		6.4.1
+        <version>6.2.1.Final-redhat-2</version>
+        6.5.0
         <version>6.3.0.Final-redhat-5</version>
--->
+        6.5.1
+        <version>6.3.1.Final-redhat-1</version>
+        6.6.0
         <version>6.4.0.Final-redhat-4</version>
+		7.0.0
+        <version>8.3.0.Final-redhat-1</version>
+-->
+        <version>8.3.0.Final-redhat-1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
