--- a/distributablewar/pom.xml
+++ b/distributablewar/pom.xml
@@ -7,21 +7,35 @@
   <version>1.0-SNAPSHOT</version>
   <name>distributablewar Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
   <dependencies>
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-web-api</artifactId>
-      <version>6.0</version>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+     <groupId>org.jboss.spec.javax.servlet</groupId>
+     <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+     <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>distributablewar</finalName>
   </build>
+  <dependencyManagement>
+   <dependencies>
+    <dependency>
+     <groupId>org.jboss.spec</groupId>
+     <artifactId>jboss-javaee-6.0</artifactId>
+     <version>3.0.2.Final-redhat-15</version>
+     <type>pom</type>
+     <scope>import</scope>
+    </dependency>
+   </dependencies>
+  </dependencyManagement>
 </project>
