--- a/hotrodclient/pom.xml
+++ b/hotrodclient/pom.xml
@@ -23,6 +23,16 @@
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-bom</artifactId>
 <!--
+        6.2.0
+        <version>6.0.1.Final-redhat-1</version>
+        6.2.1
+        <version>6.0.3.redhat-3</version>
+        6.3.0
+        <version>6.1.0.Final-redhat-4</version>
+        6.3.1
+        <version>6.1.1.Final-redhat-5</version>
+        6.3.2
+        <version>6.1.2.Final-redhat-1</version>
         6.4.0
         <version>6.2.0.Final-redhat-4</version>
         6.4.1
