--- a/restcache/pom.xml
+++ b/restcache/pom.xml
@@ -12,6 +12,16 @@
     <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
     <version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-15</version.jboss.spec.javaee.6.0>
 <!--
+        6.2.0
+        <version>6.0.1.Final-redhat-1</version>
+        6.2.1
+        <version>6.0.3.redhat-3</version>
+        6.3.0
+        <version>6.1.0.Final-redhat-4</version>
+        6.3.1
+        <version>6.1.1.Final-redhat-5</version>
+        6.3.2
+        <version>6.1.2.Final-redhat-1</version>
         6.4.0
         <version>6.2.0.Final-redhat-4</version>
         6.4.1
