--- a/distributablewar/src/main/webapp/WEB-INF/web.xml
+++ b/distributablewar/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>MyDynamicWeb</display-name>
+
   <distributable/>
 
   <filter>
@@ -20,4 +21,55 @@
   	<param-name>sleep-seconds-destroying</param-name>
     <param-value>1</param-value>
   </context-param>
+
+   <!-- Configure login to be HTTP Basic
+   <login-config>
+      <auth-method>BASIC</auth-method>
+      <realm-name>RealmUsersRoles</realm-name>
+   </login-config>
+
+https://github.com/jboss-developer/jboss-eap-quickstarts/tree/6.4.x/servlet-security
+
+User Name: quickstartUser
+Password: quickstartPwd1!
+Role: quickstarts
+
+User Name: guest
+Password: guestPwd1!
+Role: notauthorized
+   -->
+
+   <security-constraint>
+      <display-name>Example Security Constraint</display-name>
+      <web-resource-collection>
+         <web-resource-name>Protected Area</web-resource-name>
+         <!-- Define the context-relative URL(s) to be protected -->
+         <url-pattern>/protected/*</url-pattern>
+         <!-- If you list http methods, only those methods are protected -->
+         <http-method>DELETE</http-method>
+         <http-method>GET</http-method>
+         <http-method>POST</http-method>
+         <http-method>PUT</http-method>
+      </web-resource-collection>
+      <auth-constraint>
+         <!-- Anyone with one of the listed roles may access this area -->
+         <role-name>quickstarts</role-name>
+      </auth-constraint>
+    </security-constraint>
+
+    <!-- Default login configuration uses form-based authentication -->
+    <login-config>
+      <auth-method>FORM</auth-method>
+      <realm-name>Example Form-Based Authentication Area</realm-name>
+      <form-login-config>
+        <form-login-page>/protected/login.jsp</form-login-page>
+        <form-error-page>/protected/error.jsp</form-error-page>
+      </form-login-config>
+    </login-config>
+
+    <!-- Security roles referenced by this web application -->
+    <security-role>
+      <role-name>quickstarts</role-name>
+    </security-role>
+
 </web-app>
