--- a/standalonecache/pom.xml
+++ b/standalonecache/pom.xml
@@ -19,10 +19,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.org.infinispan>8.3.0.Final-redhat-1</version.org.infinispan>
-    <version.jboss.spec.javaee.7.0>9.0.1.Final</version.jboss.spec.javaee.7.0>
-    <slf4j-version>1.7.22</slf4j-version>
-    <log4j2-version>2.8</log4j2-version>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
@@ -32,14 +28,14 @@
       <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-bom</artifactId>
-        <version>${version.org.infinispan}</version>
+        <version>8.3.0.Final-redhat-1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.wildfly.bom</groupId>
         <artifactId>jboss-javaee-7.0-wildfly-with-tools</artifactId>
-        <version>${version.jboss.spec.javaee.7.0}</version>
+        <version>9.0.1.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -52,37 +48,11 @@
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-embedded</artifactId>
     </dependency>
-<!--
-    <dependency>
-      <groupId>org.jboss.logmanager</groupId>
-      <artifactId>jboss-logmanager</artifactId>
-      <version>2.0.3.Final-redhat-1</version>
-      <scope>runtime</scope>
-    </dependency>
 
-    <dependency>
-      <groupId>org.jboss.logmanager</groupId>
-      <artifactId>log4j-jboss-logmanager</artifactId>
-      <version>1.1.2.Final-redhat-2</version>
-      <scope>runtime</scope>
-    </dependency>
--->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>${log4j2-version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j-version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j2-version}</version>
+      <version>2.8</version>
     </dependency>
 
     <dependency>
