--- a/standalonecache/pom.xml
+++ b/standalonecache/pom.xml
@@ -28,7 +28,10 @@
       <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-bom</artifactId>
+        <version>6.4.1.Final-redhat-1</version>
+<!--
         <version>8.3.0.Final-redhat-1</version>
+-->
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -49,6 +52,12 @@
       <artifactId>infinispan-embedded</artifactId>
     </dependency>
 
+    <dependency>
+       <groupId>javax.transaction</groupId>
+       <artifactId>jta</artifactId>
+       <version>1.1</version>
+    </dependency>
+ 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
