--- a/distributablewar/src/main/webapp/WEB-INF/web.xml
+++ b/distributablewar/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>MyDynamicWeb</display-name>
 
+   <session-config>
+       <session-timeout>1</session-timeout>
+   </session-config>
+
   <distributable/>
 
 <!--
