--- a/hotrodclient/pom.xml
+++ b/hotrodclient/pom.xml
@@ -47,6 +47,20 @@
         <version>6.4.1.Final-redhat-1</version>
         7.0.0
         <version>8.3.0.Final-redhat-1</version>
+        7.1.0
+        <version>8.4.0.Final-redhat-2</version>
+        7.1.1
+        <version>8.4.1.Final-redhat-2</version>
+        7.1.2
+        <version>8.4.2.Final-redhat-1</version>
+        7.2.0
+        <version>8.5.0.Final-redhat-9</version>
+        7.2.1
+        <version>8.5.1.Final-redhat-1</version>
+        7.2.2
+        <version>8.5.2.Final-redhat-00001</version>
+        7.2.3
+        <version>8.5.3.Final-redhat-00002</version>
 -->
         <version>6.4.1.Final-redhat-1</version>
         <type>pom</type>
