--- a/springboot-example/pom.xml
+++ b/springboot-example/pom.xml
@@ -54,7 +54,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
+	<finalName>${project.artifactId}</finalName>
     </build>
 </project>
