--- a/springboot-example/src/main/resources/hotrod-client.properties
+++ b/springboot-example/src/main/resources/hotrod-client.properties
@@ -1,2 +1,3 @@
-infinispan.client.hotrod.uri=hotrod://admin:password@localhost:11222
+#infinispan.client.hotrod.uri=hotrod://admin:password@localhost:11222
+infinispan.client.hotrod.uri=hotrod://infinispan:11222
 infinispan.client.hotrod.cache.default.configuration=<distributed-cache><encoding media-type="application/x-protostream"/></distributed-cache>
