--- a/rhbkwork/pgprod/oracle.conf
+++ b/rhbkwork/pgprod/oracle.conf
@@ -6,12 +6,10 @@
 db=oracle
 
 # The username of the database user.
-#db-username=system
-db-username=c##testuser
+db-username=c##keycloak
 
 # The password of the database user.
-#db-password=password
-db-password=testuser123
+db-password=keycloak123
 
 # The full database JDBC URL. If not provided, a default URL is set based on the selected database vendor.
 db-url=jdbc:oracle:thin:@localhost:1521/FREE
